CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(addressbook)
FIND_PACKAGE(tracelib 1.0.0 REQUIRED)
FIND_PACKAGE(Qt4 4.5.0 COMPONENTS QtGui QtCore REQUIRED)
INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(${QT_INCLUDES} ${TRACELIB_INCLUDE_DIR})

SET(ADDRESSBOOK_SOURCES
  main.cpp
  dialog.cpp
  mainwindow.cpp)

SET(ADDRESSBOOK_MOCABLES
  dialog.h
  lineedit.h
  mainwindow.h)

SET(ADDRESSBOOK_RESOURCES
  addressbook.qrc)

QT4_WRAP_CPP(ADDRESSBOOK_MOC_SOURCES ${ADDRESSBOOK_MOCABLES})
QT4_ADD_RESOURCES(ADDRESSBOOK_QRC_SOURCES ${ADDRESSBOOK_RESOURCES})

ADD_EXECUTABLE(addressbook ${ADDRESSBOOK_SOURCES} ${ADDRESSBOOK_MOC_SOURCES} ${ADDRESSBOOK_QRC_SOURCES})
TARGET_LINK_LIBRARIES(addressbook ${QT_LIBRARIES} ${TRACELIB_LIBRARIES} ${TRACELIB_QTSUPPORT_LIBRARIES})
IF(MSVC)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
ENDIF(MSVC)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/tracelib.xml
        ${CMAKE_CURRENT_BINARY_DIR}/tracelib.xml
        COPYONLY)

# No installation as this is just a sample app
# INSTALL(TARGETS addressbook RUNTIME DESTINATION examples/addressbook
#                            LIBRARY DESTINATION lib
#                            ARCHIVE DESTINATION lib COMPONENT devel)
# INSTALL(FILES tracelib.xml MyAddresses.adr DESTINATION examples/addressbook)

