SET_DIRECTORY_PROPERTIES(PROPERTIES INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/core)

ADD_EXECUTABLE(sampleapp sampleapp.cpp person.cpp acme.cpp)
TARGET_LINK_LIBRARIES(sampleapp tracelib)
IF(MSVC)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
    SET_TARGET_PROPERTIES(sampleapp PROPERTIES COMPILE_FLAGS "/FC")
ENDIF(MSVC)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/tracelib.xml
        ${CMAKE_CURRENT_BINARY_DIR}/tracelib.xml
        COPYONLY)

INSTALL(TARGETS sampleapp RUNTIME DESTINATION examples/sampleapp
                          LIBRARY DESTINATION lib
                          ARCHIVE DESTINATION lib COMPONENT devel)
INSTALL(FILES tracelib.xml DESTINATION examples/sampleapp)
