SET_DIRECTORY_PROPERTIES(PROPERTIES INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR})

ADD_EXECUTABLE(tracegen WIN32 tracegen.cpp)
TARGET_LINK_LIBRARIES(tracegen tracelib)
IF(MSVC)
    SET_TARGET_PROPERTIES(tracegen PROPERTIES COMPILE_FLAGS "/FC")
ENDIF(MSVC)

ADD_EXECUTABLE(traceview traceview.cpp)
IF(WIN32)
    TARGET_LINK_LIBRARIES(traceview ws2_32.lib)
ENDIF(WIN32)

CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/examples/tracegen/tracelib.xml
        ./tracelib.xml
        COPYONLY)

