SET_DIRECTORY_PROPERTIES(PROPERTIES INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR})

IF(WIN32)

ADD_EXECUTABLE(tracegen WIN32 tracegen.cpp)
TARGET_LINK_LIBRARIES(tracegen tracelib)
IF(MSVC)
    SET_TARGET_PROPERTIES(tracegen PROPERTIES COMPILE_FLAGS "/FC")
ENDIF(MSVC)

ADD_EXECUTABLE(traceview traceview.cpp)
IF(WIN32)
    TARGET_LINK_LIBRARIES(traceview ws2_32.lib)
ENDIF(WIN32)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/tracelib.xml
        ${CMAKE_CURRENT_BINARY_DIR}/tracelib.xml
        COPYONLY)

endif(WIN32)
