FIND_PACKAGE(tracelib 1.0.0 REQUIRED)

INCLUDE_DIRECTORIES(${TRACELIB_INCLUDE_DIR})

ADD_EXECUTABLE(sampleapp sampleapp.cpp person.cpp acme.cpp)
TARGET_LINK_LIBRARIES(sampleapp ${TRACELIB_LIBRARIES})
IF(MSVC)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
    SET_TARGET_PROPERTIES(sampleapp PROPERTIES COMPILE_FLAGS "/FC")
ENDIF(MSVC)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/tracelib.xml
        ${CMAKE_CURRENT_BINARY_DIR}/tracelib.xml
        COPYONLY)

